[package]
name = "erajp"
version = "0.3.0"
authors = ["Tomochika Hara <rust@thara.jp>"]
edition = "2018"

description = "Japanese era converter for Rust"
repository = "https://github.com/thara/erajp"
readme = "README.md"
keywords = ["era", "japanese"]
license-file = "LICENSE"

[dependencies]
csv = "1.0.5"
serde = "1.0.84"
serde_derive = "1.0.84"
chrono = "0.4.6"
chrono-tz = "0.5.0"
lazy_static = "1.2.0"
